tests/module_ref/module_ref.exp
Error ------------------------------------------------------------------------------------------------------- B.js:11:12

Cannot call `ifRequired` with `'A'` bound to `id` because string [1] is incompatible with `$Flow$ModuleRef` [2].

   B.js:11:12
   11| ifRequired('A', A => A.FOO); // Error - A is a plain string, not a module ref
                  ^^^ [1]

References:
   B.js:7:7
    7|   id: $Flow$ModuleRef<TModule>,
             ^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------- B.js:13:24

Cannot get `A.BAR` because property `BAR` is missing in object literal [1].

   B.js:13:24
   13| ifRequired('m#A', A => A.BAR); // Ok
                              ^^^^^

References:
   A.js:6:18
                        v
    6| module.exports = {
    7|   FOO: 'bar',
    8| };
       ^ [1]



Found 2 errors
